plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'pl.edu.agh.iisg.to.battleships'
version '1.0-SNAPSHOT'

apply plugin: 'org.openjfx.javafxplugin'

repositories {
    mavenCentral()
    maven {
        url "https://dl.bintray.com/speljohan/rxjavafx-mirror"
        }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
}

application {
    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
    mainClassName = 'pl.edu.agh.iisg.to.battleships.Main'
}
java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

javafx {
    version = '14'
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.11'
    implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.6'
    implementation group: 'io.reactivex.rxjava3', name: 'rxjavafx', version: '3.0.1'
    implementation group: 'org.apache.tika', name: 'tika-core', version: '1.4'
    implementation group: 'org.json', name: 'json', version: '20200518'
    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
    implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
    implementation 'org.hibernate:hibernate-core:5.2.2.Final'
    implementation 'org.hibernate:hibernate-entitymanager:5.2.2.Final'
    implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
    implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
    compile group: 'org.fxmisc.easybind', name: 'easybind', version: '1.0.4-SNAPSHOT'

}
